# telemetry_service

./: .dockerignore  .gitignore  Dockerfile  README.md  README_ru.md  docker-compose.yml  locust_report.html  locustfile.py  pyproject.toml
alembic/: env.py
alembic/versions/: c891b302e85f_initial_migration.py
app/: config.py  crud.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  worker.py
app/routers/: analytics.py  devices.py  telemetry.py  users.py
